...
    //----------------------------------------------------------------------//
    // MARK: IBActions
    //----------------------------------------------------------------------//
    
    @IBAction func addToDoListItemButtonTapped(_ sender: UIButton)
    {
        let alert = UIAlertController(title: "Enter item:",
                                      message: "",
                                      preferredStyle: .alert)
        
        alert.addTextField
        {
            (textField) in
            textField.placeholder = "Item name"
            textField.autocapitalizationType = .sentences
        }
        
        let addAction = UIAlertAction(title: "Add", style: .default, handler:
        {
            [unowned self](alert_) -> Void in
            
            let textField = alert.textFields![0] as UITextField
            
            guard textField.text != "" else
...
    
    @IBAction func editDoneButtonTapped(_ sender: UIButton)
    {
        if tableView.isEditing
        {
            tableView.isEditing = false
            editDoneButton.setTitle("Edit", for: UIControlState())
        }
        else
        {
            tableView.isEditing = true
            editDoneButton.setTitle("Done", for: UIControlState())
        }
    }
    
    //----------------------------------------------------------------------//
    // MARK: UITableViewDelegate
    //----------------------------------------------------------------------//
...
        print("\n Selected to do list item: \(toDoListItems![indexPath.row].name) \n")
        
        tableView.deselectRow(at: indexPath, animated: true)
        
        let toDoListItem = toDoListItems![indexPath.row]
        
        let alert = UIAlertController(title: "Edit item:",
                                      message: "",
                                      preferredStyle: .alert)
        
        alert.addTextField
        {
            (textField) in
...
