...
            <subviews>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lRj-Mo-zCP">
                    <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                    <subviews>
                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="0OC-NB-2AY" userLabel="To Do List Name Text Field">
                            <rect key="frame" x="22" y="15" width="330" height="30"/>
                            <accessibility key="accessibilityConfiguration" label="ToDoListNameTextField"/>
                            <nil key="textColor"/>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done" textContentType="name"/>
                            <connections>
                                <outlet property="delegate" destination="-1" id="HG1-mI-CnI"/>
                            </connections>
...
                        <outlet property="delegate" destination="-1" id="ojP-az-evc"/>
                    </connections>
                </tableView>
                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="BJf-pE-cDE">
                    <rect key="frame" x="0.0" y="732" width="375" height="50"/>
                    <subviews>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8wC-qg-rjr" userLabel="AddToDoListItemButton">
                            <rect key="frame" x="0.0" y="0.0" width="186.66666666666666" height="50"/>
                            <color key="backgroundColor" red="0.50196081400000003" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                            <accessibility key="accessibilityConfiguration" label="AddToDoListItemButton"/>
                            <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                            <state key="normal" title="+">
                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
