...
    //----------------------------------------------------------------------//
    // MARK: IBActions
    //----------------------------------------------------------------------//
    
    @IBAction func addToDoListButtonTapped(_ sender: UIButton)
    {
        let alert = UIAlertController(title: "Enter to do list name:",
                                      message: "",
                                      preferredStyle: .alert)
        
        alert.addTextField
        {
            (textField) in
...
